Fix lint issues