@@ -54,121 +54,116 @@ import java.util.ArrayList;
 import java.util.HashMap;
 
 /**
- * An <CODE>Annotation</CODE> is a little note that can be added to a page on
- * a document.
- * 
+ * An <CODE>Annotation</CODE> is a little note that can be added to a page on a document.
+ *
  * @see Element
  * @see Anchor
  */
 
+@SuppressWarnings("unchecked")
 public class Annotation implements Element {
 
 	// membervariables
 
 	/** This is a possible annotation type. */
-	public static final int TEXT = 0;
+	public static final int		TEXT					= 0;
 
 	/** This is a possible annotation type. */
-	public static final int URL_NET = 1;
+	public static final int		URL_NET					= 1;
 
 	/** This is a possible annotation type. */
-	public static final int URL_AS_STRING = 2;
+	public static final int		URL_AS_STRING			= 2;
 
 	/** This is a possible annotation type. */
-	public static final int FILE_DEST = 3;
+	public static final int		FILE_DEST				= 3;
 
 	/** This is a possible annotation type. */
-	public static final int FILE_PAGE = 4;
+	public static final int		FILE_PAGE				= 4;
 
 	/** This is a possible annotation type. */
-	public static final int NAMED_DEST = 5;
+	public static final int		NAMED_DEST				= 5;
 
 	/** This is a possible annotation type. */
-	public static final int LAUNCH = 6;
+	public static final int		LAUNCH					= 6;
 
 	/** This is a possible annotation type. */
-	public static final int SCREEN = 7;
+	public static final int		SCREEN					= 7;
 
 	/** This is a possible attribute. */
-	public static final String TITLE = "title";
+	public static final String	TITLE					= "title";
 
 	/** This is a possible attribute. */
-	public static final String CONTENT = "content";
+	public static final String	CONTENT					= "content";
 
 	/** This is a possible attribute. */
-	public static final String URL = "url";
+	public static final String	URL						= "url";
 
 	/** This is a possible attribute. */
-	public static final String FILE = "file";
+	public static final String	FILE					= "file";
 
 	/** This is a possible attribute. */
-	public static final String DESTINATION = "destination";
+	public static final String	DESTINATION				= "destination";
 
 	/** This is a possible attribute. */
-	public static final String PAGE = "page";
+	public static final String	PAGE					= "page";
 
 	/** This is a possible attribute. */
-	public static final String NAMED = "named";
+	public static final String	NAMED					= "named";
 
 	/** This is a possible attribute. */
-	public static final String APPLICATION = "application";
+	public static final String	APPLICATION				= "application";
 
 	/** This is a possible attribute. */
-	public static final String PARAMETERS = "parameters";
+	public static final String	PARAMETERS				= "parameters";
 
 	/** This is a possible attribute. */
-	public static final String OPERATION = "operation";
+	public static final String	OPERATION				= "operation";
 
 	/** This is a possible attribute. */
-	public static final String DEFAULTDIR = "defaultdir";
+	public static final String	DEFAULTDIR				= "defaultdir";
 
 	/** This is a possible attribute. */
-	public static final String LLX = "llx";
+	public static final String	LLX						= "llx";
 
 	/** This is a possible attribute. */
-	public static final String LLY = "lly";
+	public static final String	LLY						= "lly";
 
 	/** This is a possible attribute. */
-	public static final String URX = "urx";
+	public static final String	URX						= "urx";
 
 	/** This is a possible attribute. */
-	public static final String URY = "ury";
+	public static final String	URY						= "ury";
 
 	/** This is a possible attribute. */
-	public static final String MIMETYPE = "mime";
+	public static final String	MIMETYPE				= "mime";
 
 	/** This is the type of annotation. */
-	protected int annotationtype;
+	protected int				annotationtype;
 
 	/** This is the title of the <CODE>Annotation</CODE>. */
-	protected HashMap annotationAttributes = new HashMap();
+	protected HashMap			annotationAttributes	= new HashMap();
 
 	/** This is the lower left x-value */
-	protected float llx = Float.NaN;
+	protected float				llx						= Float.NaN;
 
 	/** This is the lower left y-value */
-	protected float lly = Float.NaN;
+	protected float				lly						= Float.NaN;
 
 	/** This is the upper right x-value */
-	protected float urx = Float.NaN;
+	protected float				urx						= Float.NaN;
 
 	/** This is the upper right y-value */
-	protected float ury = Float.NaN;
+	protected float				ury						= Float.NaN;
 
 	// constructors
 
 	/**
-	 * Constructs an <CODE>Annotation</CODE> with a certain title and some
-	 * text.
-	 * 
-	 * @param llx
-	 *            lower left x coordinate
-	 * @param lly
-	 *            lower left y coordinate
-	 * @param urx
-	 *            upper right x coordinate
-	 * @param ury
-	 *            upper right y coordinate
+	 * Constructs an <CODE>Annotation</CODE> with a certain title and some text.
+	 *
+	 * @param llx lower left x coordinate
+	 * @param lly lower left y coordinate
+	 * @param urx upper right x coordinate
+	 * @param ury upper right y coordinate
 	 */
 	private Annotation(float llx, float lly, float urx, float ury) {
 		this.llx = llx;
@@ -180,23 +175,20 @@ public class Annotation implements Element {
 	/**
 	 * Copy constructor.
 	 */
-    public Annotation(Annotation an) {
-        annotationtype = an.annotationtype;
-        annotationAttributes = an.annotationAttributes;
-        llx = an.llx;
-        lly = an.lly;
-        urx = an.urx;
-        ury = an.ury;
-    }
-    
+	public Annotation(Annotation an) {
+		annotationtype = an.annotationtype;
+		annotationAttributes = an.annotationAttributes;
+		llx = an.llx;
+		lly = an.lly;
+		urx = an.urx;
+		ury = an.ury;
+	}
+
 	/**
-	 * Constructs an <CODE>Annotation</CODE> with a certain title and some
-	 * text.
-	 * 
-	 * @param title
-	 *            the title of the annotation
-	 * @param text
-	 *            the content of the annotation
+	 * Constructs an <CODE>Annotation</CODE> with a certain title and some text.
+	 *
+	 * @param title the title of the annotation
+	 * @param text the content of the annotation
 	 */
 	public Annotation(String title, String text) {
 		annotationtype = TEXT;
@@ -205,24 +197,16 @@ public class Annotation implements Element {
 	}
 
 	/**
-	 * Constructs an <CODE>Annotation</CODE> with a certain title and some
-	 * text.
-	 * 
-	 * @param title
-	 *            the title of the annotation
-	 * @param text
-	 *            the content of the annotation
-	 * @param llx
-	 *            the lower left x-value
-	 * @param lly
-	 *            the lower left y-value
-	 * @param urx
-	 *            the upper right x-value
-	 * @param ury
-	 *            the upper right y-value
+	 * Constructs an <CODE>Annotation</CODE> with a certain title and some text.
+	 *
+	 * @param title the title of the annotation
+	 * @param text the content of the annotation
+	 * @param llx the lower left x-value
+	 * @param lly the lower left y-value
+	 * @param urx the upper right x-value
+	 * @param ury the upper right y-value
 	 */
-	public Annotation(String title, String text, float llx, float lly,
-			float urx, float ury) {
+	public Annotation(String title, String text, float llx, float lly, float urx, float ury) {
 		this(llx, lly, urx, ury);
 		annotationtype = TEXT;
 		annotationAttributes.put(TITLE, title);
@@ -231,17 +215,12 @@ public class Annotation implements Element {
 
 	/**
 	 * Constructs an <CODE>Annotation</CODE>.
-	 * 
-	 * @param llx
-	 *            the lower left x-value
-	 * @param lly
-	 *            the lower left y-value
-	 * @param urx
-	 *            the upper right x-value
-	 * @param ury
-	 *            the upper right y-value
-	 * @param url
-	 *            the external reference
+	 *
+	 * @param llx the lower left x-value
+	 * @param lly the lower left y-value
+	 * @param urx the upper right x-value
+	 * @param ury the upper right y-value
+	 * @param url the external reference
 	 */
 	public Annotation(float llx, float lly, float urx, float ury, URL url) {
 		this(llx, lly, urx, ury);
@@ -251,17 +230,12 @@ public class Annotation implements Element {
 
 	/**
 	 * Constructs an <CODE>Annotation</CODE>.
-	 * 
-	 * @param llx
-	 *            the lower left x-value
-	 * @param lly
-	 *            the lower left y-value
-	 * @param urx
-	 *            the upper right x-value
-	 * @param ury
-	 *            the upper right y-value
-	 * @param url
-	 *            the external reference
+	 *
+	 * @param llx the lower left x-value
+	 * @param lly the lower left y-value
+	 * @param urx the upper right x-value
+	 * @param ury the upper right y-value
+	 * @param url the external reference
 	 */
 	public Annotation(float llx, float lly, float urx, float ury, String url) {
 		this(llx, lly, urx, ury);
@@ -271,22 +245,15 @@ public class Annotation implements Element {
 
 	/**
 	 * Constructs an <CODE>Annotation</CODE>.
-	 * 
-	 * @param llx
-	 *            the lower left x-value
-	 * @param lly
-	 *            the lower left y-value
-	 * @param urx
-	 *            the upper right x-value
-	 * @param ury
-	 *            the upper right y-value
-	 * @param file
-	 *            an external PDF file
-	 * @param dest
-	 *            the destination in this file
+	 *
+	 * @param llx the lower left x-value
+	 * @param lly the lower left y-value
+	 * @param urx the upper right x-value
+	 * @param ury the upper right y-value
+	 * @param file an external PDF file
+	 * @param dest the destination in this file
 	 */
-	public Annotation(float llx, float lly, float urx, float ury, String file,
-			String dest) {
+	public Annotation(float llx, float lly, float urx, float ury, String file, String dest) {
 		this(llx, lly, urx, ury);
 		annotationtype = FILE_DEST;
 		annotationAttributes.put(FILE, file);
@@ -295,95 +262,68 @@ public class Annotation implements Element {
 
 	/**
 	 * Creates a Screen annotation to embed media clips
-	 * 
+	 *
 	 * @param llx
 	 * @param lly
 	 * @param urx
 	 * @param ury
-	 * @param moviePath
-	 *            path to the media clip file
-	 * @param mimeType
-	 *            mime type of the media
-	 * @param showOnDisplay
-	 *            if true play on display of the page
+	 * @param moviePath path to the media clip file
+	 * @param mimeType mime type of the media
+	 * @param showOnDisplay if true play on display of the page
 	 */
-	public Annotation(float llx, float lly, float urx, float ury,
-			String moviePath, String mimeType, boolean showOnDisplay) {
+	public Annotation(float llx, float lly, float urx, float ury, String moviePath, String mimeType, boolean showOnDisplay) {
 		this(llx, lly, urx, ury);
 		annotationtype = SCREEN;
 		annotationAttributes.put(FILE, moviePath);
 		annotationAttributes.put(MIMETYPE, mimeType);
-		annotationAttributes.put(PARAMETERS, new boolean[] {
-				false /* embedded */, showOnDisplay });
+		annotationAttributes.put(PARAMETERS, new boolean[] { false /* embedded */, showOnDisplay });
 	}
 
 	/**
 	 * Constructs an <CODE>Annotation</CODE>.
-	 * 
-	 * @param llx
-	 *            the lower left x-value
-	 * @param lly
-	 *            the lower left y-value
-	 * @param urx
-	 *            the upper right x-value
-	 * @param ury
-	 *            the upper right y-value
-	 * @param file
-	 *            an external PDF file
-	 * @param page
-	 *            a page number in this file
+	 *
+	 * @param llx the lower left x-value
+	 * @param lly the lower left y-value
+	 * @param urx the upper right x-value
+	 * @param ury the upper right y-value
+	 * @param file an external PDF file
+	 * @param page a page number in this file
 	 */
-	public Annotation(float llx, float lly, float urx, float ury, String file,
-			int page) {
+	public Annotation(float llx, float lly, float urx, float ury, String file, int page) {
 		this(llx, lly, urx, ury);
 		annotationtype = FILE_PAGE;
 		annotationAttributes.put(FILE, file);
-		annotationAttributes.put(PAGE, new Integer(page));
+		annotationAttributes.put(PAGE, Integer.valueOf(page));
 	}
 
 	/**
 	 * Constructs an <CODE>Annotation</CODE>.
-	 * 
-	 * @param llx
-	 *            the lower left x-value
-	 * @param lly
-	 *            the lower left y-value
-	 * @param urx
-	 *            the upper right x-value
-	 * @param ury
-	 *            the upper right y-value
-	 * @param named
-	 *            a named destination in this file
+	 *
+	 * @param llx the lower left x-value
+	 * @param lly the lower left y-value
+	 * @param urx the upper right x-value
+	 * @param ury the upper right y-value
+	 * @param named a named destination in this file
 	 */
 	public Annotation(float llx, float lly, float urx, float ury, int named) {
 		this(llx, lly, urx, ury);
 		annotationtype = NAMED_DEST;
-		annotationAttributes.put(NAMED, new Integer(named));
+		annotationAttributes.put(NAMED, Integer.valueOf(named));
 	}
 
 	/**
 	 * Constructs an <CODE>Annotation</CODE>.
-	 * 
-	 * @param llx
-	 *            the lower left x-value
-	 * @param lly
-	 *            the lower left y-value
-	 * @param urx
-	 *            the upper right x-value
-	 * @param ury
-	 *            the upper right y-value
-	 * @param application
-	 *            an external application
-	 * @param parameters
-	 *            parameters to pass to this application
-	 * @param operation
-	 *            the operation to pass to this application
-	 * @param defaultdir
-	 *            the default directory to run this application in
+	 *
+	 * @param llx the lower left x-value
+	 * @param lly the lower left y-value
+	 * @param urx the upper right x-value
+	 * @param ury the upper right y-value
+	 * @param application an external application
+	 * @param parameters parameters to pass to this application
+	 * @param operation the operation to pass to this application
+	 * @param defaultdir the default directory to run this application in
 	 */
-	public Annotation(float llx, float lly, float urx, float ury,
-			String application, String parameters, String operation,
-			String defaultdir) {
+	public Annotation(float llx, float lly, float urx, float ury, String application, String parameters, String operation, String defaultdir) {
 		this(llx, lly, urx, ury);
 		annotationtype = LAUNCH;
 		annotationAttributes.put(APPLICATION, application);
@@ -396,9 +336,10 @@ public class Annotation implements Element {
 
 	/**
 	 * Gets the type of the text element.
-	 * 
+	 *
 	 * @return a type
 	 */
+	@Override
 	public int type() {
 		return Element.ANNOTATION;
 	}
@@ -406,11 +347,11 @@ public class Annotation implements Element {
 	/**
 	 * Processes the element by adding it (or the different parts) to an <CODE>
 	 * ElementListener</CODE>.
-	 * 
-	 * @param listener
-	 *            an <CODE>ElementListener</CODE>
+	 *
+	 * @param listener an <CODE>ElementListener</CODE>
 	 * @return <CODE>true</CODE> if the element was processed successfully
 	 */
+	@Override
 	public boolean process(ElementListener listener) {
 		try {
 			return listener.add(this);
@@ -421,10 +362,11 @@ public class Annotation implements Element {
 
 	/**
 	 * Gets all the chunks in this element.
-	 * 
+	 *
 	 * @return an <CODE>ArrayList</CODE>
 	 */
 
+	@Override
 	public ArrayList getChunks() {
 		return new ArrayList();
 	}
@@ -433,15 +375,11 @@ public class Annotation implements Element {
 
 	/**
 	 * Sets the dimensions of this annotation.
-	 * 
-	 * @param llx
-	 *            the lower left x-value
-	 * @param lly
-	 *            the lower left y-value
-	 * @param urx
-	 *            the upper right x-value
-	 * @param ury
-	 *            the upper right y-value
+	 *
+	 * @param llx the lower left x-value
+	 * @param lly the lower left y-value
+	 * @param urx the upper right x-value
+	 * @param ury the upper right y-value
 	 */
 	public void setDimensions(float llx, float lly, float urx, float ury) {
 		this.llx = llx;
@@ -454,7 +392,7 @@ public class Annotation implements Element {
 
 	/**
 	 * Returns the lower left x-value.
-	 * 
+	 *
 	 * @return a value
 	 */
 	public float llx() {
@@ -463,7 +401,7 @@ public class Annotation implements Element {
 
 	/**
 	 * Returns the lower left y-value.
-	 * 
+	 *
 	 * @return a value
 	 */
 	public float lly() {
@@ -472,7 +410,7 @@ public class Annotation implements Element {
 
 	/**
 	 * Returns the upper right x-value.
-	 * 
+	 *
 	 * @return a value
 	 */
 	public float urx() {
@@ -481,7 +419,7 @@ public class Annotation implements Element {
 
 	/**
 	 * Returns the upper right y-value.
-	 * 
+	 *
 	 * @return a value
 	 */
 	public float ury() {
@@ -490,59 +428,59 @@ public class Annotation implements Element {
 
 	/**
 	 * Returns the lower left x-value.
-	 * 
-	 * @param def
-	 *            the default value
+	 *
+	 * @param def the default value
 	 * @return a value
 	 */
 	public float llx(float def) {
-		if (Float.isNaN(llx))
+		if (Float.isNaN(llx)) {
 			return def;
+		}
 		return llx;
 	}
 
 	/**
 	 * Returns the lower left y-value.
-	 * 
-	 * @param def
-	 *            the default value
+	 *
+	 * @param def the default value
 	 * @return a value
 	 */
 	public float lly(float def) {
-		if (Float.isNaN(lly))
+		if (Float.isNaN(lly)) {
 			return def;
+		}
 		return lly;
 	}
 
 	/**
 	 * Returns the upper right x-value.
-	 * 
-	 * @param def
-	 *            the default value
+	 *
+	 * @param def the default value
 	 * @return a value
 	 */
 	public float urx(float def) {
-		if (Float.isNaN(urx))
+		if (Float.isNaN(urx)) {
 			return def;
+		}
 		return urx;
 	}
 
 	/**
 	 * Returns the upper right y-value.
-	 * 
-	 * @param def
-	 *            the default value
+	 *
+	 * @param def the default value
 	 * @return a value
 	 */
 	public float ury(float def) {
-		if (Float.isNaN(ury))
+		if (Float.isNaN(ury)) {
 			return def;
+		}
 		return ury;
 	}
 
 	/**
 	 * Returns the type of this <CODE>Annotation</CODE>.
-	 * 
+	 *
 	 * @return a type
 	 */
 	public int annotationType() {
@@ -551,49 +489,53 @@ public class Annotation implements Element {
 
 	/**
 	 * Returns the title of this <CODE>Annotation</CODE>.
-	 * 
+	 *
 	 * @return a name
 	 */
 	public String title() {
 		String s = (String) annotationAttributes.get(TITLE);
-		if (s == null)
+		if (s == null) {
 			s = "";
+		}
 		return s;
 	}
 
 	/**
 	 * Gets the content of this <CODE>Annotation</CODE>.
-	 * 
+	 *
 	 * @return a reference
 	 */
 	public String content() {
 		String s = (String) annotationAttributes.get(CONTENT);
-		if (s == null)
+		if (s == null) {
 			s = "";
+		}
 		return s;
 	}
 
 	/**
 	 * Gets the content of this <CODE>Annotation</CODE>.
-	 * 
+	 *
 	 * @return a reference
 	 */
 	public HashMap attributes() {
 		return annotationAttributes;
 	}
-	
+
 	/**
 	 * @see com.lowagie.text.Element#isContent()
-	 * @since	iText 2.0.8
+	 * @since iText 2.0.8
 	 */
+	@Override
 	public boolean isContent() {
 		return true;
 	}
 
 	/**
 	 * @see com.lowagie.text.Element#isNestable()
-	 * @since	iText 2.0.8
+	 * @since iText 2.0.8
 	 */
+	@Override
 	public boolean isNestable() {
 		return true;
 	}
