@@ -49,51 +49,49 @@
 
 package com.lowagie.text;
 
-import java.awt.Color;
-import java.net.URL;
-import java.util.ArrayList;
-import java.util.HashMap;
-
 import com.lowagie.text.pdf.HyphenationEvent;
 import com.lowagie.text.pdf.PdfAction;
 import com.lowagie.text.pdf.PdfAnnotation;
 import com.lowagie.text.pdf.PdfContentByte;
 import com.lowagie.text.pdf.draw.DrawInterface;
 
+import java.awt.Color;
+import java.net.URL;
+import java.util.ArrayList;
+import java.util.HashMap;
+
 /**
- * This is the smallest significant part of text that can be added to a
- * document.
+ * This is the smallest significant part of text that can be added to a document.
  * <P>
- * Most elements can be divided in one or more <CODE>Chunk</CODE>s. A chunk
- * is a <CODE>String</CODE> with a certain <CODE>Font</CODE>. All other
- * layout parameters should be defined in the object to which this chunk of text
- * is added.
+ * Most elements can be divided in one or more <CODE>Chunk</CODE>s. A chunk is a <CODE>String</CODE>
+ * with a certain <CODE>Font</CODE>. All other layout parameters should be defined in the object to
+ * which this chunk of text is added.
  * <P>
  * Example: <BLOCKQUOTE>
- * 
+ *
  * <PRE>
- * 
+ *
  * <STRONG>Chunk chunk = new Chunk("Hello world",
  * FontFactory.getFont(FontFactory.COURIER, 20, Font.ITALIC, new Color(255, 0,
  * 0))); </STRONG> document.add(chunk);
- * 
  * </PRE>
- * 
+ *
  * </BLOCKQUOTE>
  */
 
+@SuppressWarnings("unchecked")
 public class Chunk implements Element {
 
 	// public static membervariables
 
 	/** The character stand in for an image or a separator. */
-	public static final String OBJECT_REPLACEMENT_CHARACTER = "\ufffc";
+	public static final String	OBJECT_REPLACEMENT_CHARACTER	= "\ufffc";
 
 	/** This is a Chunk containing a newline. */
-	public static final Chunk NEWLINE = new Chunk("\n");
+	public static final Chunk	NEWLINE							= new Chunk("\n");
 
 	/** This is a Chunk containing a newpage. */
-	public static final Chunk NEXTPAGE = new Chunk("");
+	public static final Chunk	NEXTPAGE						= new Chunk("");
 	static {
 		NEXTPAGE.setNewPage();
 	}
@@ -101,13 +99,13 @@ public class Chunk implements Element {
 	// member variables
 
 	/** This is the content of this chunk of text. */
-	protected StringBuffer content = null;
+	protected StringBuffer	content		= null;
 
 	/** This is the <CODE>Font</CODE> of this chunk of text. */
-	protected Font font = null;
+	protected Font			font		= null;
 
 	/** Contains some of the attributes for this Chunk. */
-	protected HashMap attributes = null;
+	protected HashMap		attributes	= null;
 
 	// constructors
 
@@ -115,34 +113,33 @@ public class Chunk implements Element {
 	 * Empty constructor.
 	 */
 	public Chunk() {
-		this.content = new StringBuffer();
-		this.font = new Font();
+		content = new StringBuffer();
+		font = new Font();
 	}
 
-    /**
-     * A <CODE>Chunk</CODE> copy constructor.
-     * @param ck the <CODE>Chunk</CODE> to be copied
-     */    
-    public Chunk(Chunk ck) {
-        if (ck.content != null) {
-            content = new StringBuffer(ck.content.toString());
-        }
-        if (ck.font != null) {
-            font = new Font(ck.font);
-        }
-        if (ck.attributes != null) {
-            attributes = new HashMap(ck.attributes);
-        }
-    }
-    
+	/**
+	 * A <CODE>Chunk</CODE> copy constructor.
+	 * 
+	 * @param ck the <CODE>Chunk</CODE> to be copied
+	 */
+	public Chunk(Chunk ck) {
+		if (ck.content != null) {
+			content = new StringBuffer(ck.content.toString());
+		}
+		if (ck.font != null) {
+			font = new Font(ck.font);
+		}
+		if (ck.attributes != null) {
+			attributes = new HashMap(ck.attributes);
+		}
+	}
+
 	/**
 	 * Constructs a chunk of text with a certain content and a certain <CODE>
 	 * Font</CODE>.
-	 * 
-	 * @param content
-	 *            the content
-	 * @param font
-	 *            the font
+	 *
+	 * @param content the content
+	 * @param font the font
 	 */
 	public Chunk(String content, Font font) {
 		this.content = new StringBuffer(content);
@@ -150,11 +147,9 @@ public class Chunk implements Element {
 	}
 
 	/**
-	 * Constructs a chunk of text with a certain content, without specifying a
-	 * <CODE>Font</CODE>.
-	 * 
-	 * @param content
-	 *            the content
+	 * Constructs a chunk of text with a certain content, without specifying a <CODE>Font</CODE>.
+	 *
+	 * @param content the content
 	 */
 	public Chunk(String content) {
 		this(content, new Font());
@@ -162,24 +157,21 @@ public class Chunk implements Element {
 
 	/**
 	 * Constructs a chunk of text with a char and a certain <CODE>Font</CODE>.
-	 * 
-	 * @param c
-	 *            the content
-	 * @param font
-	 *            the font
+	 *
+	 * @param c the content
+	 * @param font the font
 	 */
 	public Chunk(char c, Font font) {
-		this.content = new StringBuffer();
-		this.content.append(c);
+		content = new StringBuffer();
+		content.append(c);
 		this.font = font;
 	}
 
 	/**
 	 * Constructs a chunk of text with a char, without specifying a <CODE>Font
 	 * </CODE>.
-	 * 
-	 * @param c
-	 *            the content
+	 *
+	 * @param c the content
 	 */
 	public Chunk(char c) {
 		this(c, new Font());
@@ -187,100 +179,94 @@ public class Chunk implements Element {
 
 	/**
 	 * Constructs a chunk containing an <CODE>Image</CODE>.
-	 * 
-	 * @param image
-	 *            the image
-	 * @param offsetX
-	 *            the image offset in the x direction
-	 * @param offsetY
-	 *            the image offset in the y direction
+	 *
+	 * @param image the image
+	 * @param offsetX the image offset in the x direction
+	 * @param offsetY the image offset in the y direction
 	 */
 	public Chunk(Image image, float offsetX, float offsetY) {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
 		Image copyImage = Image.getInstance(image);
 		copyImage.setAbsolutePosition(Float.NaN, Float.NaN);
-		setAttribute(IMAGE, new Object[] { copyImage, new Float(offsetX),
-				new Float(offsetY), Boolean.FALSE });
+		setAttribute(IMAGE, new Object[] { copyImage, Float.valueOf(offsetX), Float.valueOf(offsetY), Boolean.FALSE });
 	}
 
 	/**
 	 * Key for drawInterface of the Separator.
-	 * @since	2.1.2
+	 * 
+	 * @since 2.1.2
 	 */
 	public static final String SEPARATOR = "SEPARATOR";
-	
+
 	/**
-	 * Creates a separator Chunk.
-     * Note that separator chunks can't be used in combination with tab chunks!
-	 * @param	separator	the drawInterface to use to draw the separator.
-	 * @since	2.1.2
+	 * Creates a separator Chunk. Note that separator chunks can't be used in combination with tab
+	 * chunks!
+	 * 
+	 * @param separator the drawInterface to use to draw the separator.
+	 * @since 2.1.2
 	 */
 	public Chunk(DrawInterface separator) {
 		this(separator, false);
-	}	
-	
+	}
+
 	/**
-	 * Creates a separator Chunk.
-     * Note that separator chunks can't be used in combination with tab chunks!
-	 * @param	separator	the drawInterface to use to draw the separator.
-	 * @param	vertical	true if this is a vertical separator
-	 * @since	2.1.2
+	 * Creates a separator Chunk. Note that separator chunks can't be used in combination with tab
+	 * chunks!
+	 * 
+	 * @param separator the drawInterface to use to draw the separator.
+	 * @param vertical true if this is a vertical separator
+	 * @since 2.1.2
 	 */
 	public Chunk(DrawInterface separator, boolean vertical) {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
-		setAttribute(SEPARATOR, new Object[] {separator, Boolean.valueOf(vertical)});
+		setAttribute(SEPARATOR, new Object[] { separator, Boolean.valueOf(vertical) });
 	}
 
 	/**
 	 * Key for drawInterface of the tab.
-	 * @since	2.1.2
+	 * 
+	 * @since 2.1.2
 	 */
 	public static final String TAB = "TAB";
-	
+
 	/**
-	 * Creates a tab Chunk.
-     * Note that separator chunks can't be used in combination with tab chunks!
-	 * @param	separator	the drawInterface to use to draw the tab.
-	 * @param	tabPosition	an X coordinate that will be used as start position for the next Chunk.
-	 * @since	2.1.2
+	 * Creates a tab Chunk. Note that separator chunks can't be used in combination with tab chunks!
+	 * 
+	 * @param separator the drawInterface to use to draw the tab.
+	 * @param tabPosition an X coordinate that will be used as start position for the next Chunk.
+	 * @since 2.1.2
 	 */
 	public Chunk(DrawInterface separator, float tabPosition) {
 		this(separator, tabPosition, false);
 	}
-	
+
 	/**
-	 * Creates a tab Chunk.
-     * Note that separator chunks can't be used in combination with tab chunks!
-	 * @param	separator	the drawInterface to use to draw the tab.
-	 * @param	tabPosition	an X coordinate that will be used as start position for the next Chunk.
-	 * @param	newline		if true, a newline will be added if the tabPosition has already been reached.
-	 * @since	2.1.2
+	 * Creates a tab Chunk. Note that separator chunks can't be used in combination with tab chunks!
+	 * 
+	 * @param separator the drawInterface to use to draw the tab.
+	 * @param tabPosition an X coordinate that will be used as start position for the next Chunk.
+	 * @param newline if true, a newline will be added if the tabPosition has already been reached.
+	 * @since 2.1.2
 	 */
 	public Chunk(DrawInterface separator, float tabPosition, boolean newline) {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
 		if (tabPosition < 0) {
 			throw new IllegalArgumentException("A tab position may not be lower than 0; yours is " + tabPosition);
 		}
-		setAttribute(TAB, new Object[] {separator, new Float(tabPosition), Boolean.valueOf(newline), new Float(0)});
+		setAttribute(TAB, new Object[] { separator, Float.valueOf(tabPosition), Boolean.valueOf(newline), Float.valueOf(0) });
 	}
 
 	/**
 	 * Constructs a chunk containing an <CODE>Image</CODE>.
-	 * 
-	 * @param image
-	 *            the image
-	 * @param offsetX
-	 *            the image offset in the x direction
-	 * @param offsetY
-	 *            the image offset in the y direction
-	 * @param changeLeading
-	 *            true if the leading has to be adapted to the image
+	 *
+	 * @param image the image
+	 * @param offsetX the image offset in the x direction
+	 * @param offsetY the image offset in the y direction
+	 * @param changeLeading true if the leading has to be adapted to the image
 	 */
-	public Chunk(Image image, float offsetX, float offsetY,
-			boolean changeLeading) {
+	public Chunk(Image image, float offsetX, float offsetY, boolean changeLeading) {
 		this(OBJECT_REPLACEMENT_CHARACTER, new Font());
-		setAttribute(IMAGE, new Object[] { image, new Float(offsetX),
-				new Float(offsetY), Boolean.valueOf(changeLeading) });
+		setAttribute(IMAGE, new Object[] { image, Float.valueOf(offsetX), Float.valueOf(offsetY), Boolean.valueOf(changeLeading) });
 	}
 
 	// implementation of the Element-methods
@@ -288,11 +274,11 @@ public class Chunk implements Element {
 	/**
 	 * Processes the element by adding it (or the different parts) to an <CODE>
 	 * ElementListener</CODE>.
-	 * 
-	 * @param listener
-	 *            an <CODE>ElementListener</CODE>
+	 *
+	 * @param listener an <CODE>ElementListener</CODE>
 	 * @return <CODE>true</CODE> if the element was processed successfully
 	 */
+	@Override
 	public boolean process(ElementListener listener) {
 		try {
 			return listener.add(this);
@@ -303,18 +289,20 @@ public class Chunk implements Element {
 
 	/**
 	 * Gets the type of the text element.
-	 * 
+	 *
 	 * @return a type
 	 */
+	@Override
 	public int type() {
 		return Element.CHUNK;
 	}
 
 	/**
 	 * Gets all the chunks in this element.
-	 * 
+	 *
 	 * @return an <CODE>ArrayList</CODE>
 	 */
+	@Override
 	public ArrayList getChunks() {
 		ArrayList tmp = new ArrayList();
 		tmp.add(this);
@@ -325,9 +313,8 @@ public class Chunk implements Element {
 
 	/**
 	 * appends some text to this <CODE>Chunk</CODE>.
-	 * 
-	 * @param string
-	 *            <CODE>String</CODE>
+	 *
+	 * @param string <CODE>String</CODE>
 	 * @return a <CODE>StringBuffer</CODE>
 	 */
 	public StringBuffer append(String string) {
@@ -336,9 +323,8 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets the font of this <CODE>Chunk</CODE>.
-	 * 
-	 * @param font
-	 *            a <CODE>Font</CODE>
+	 *
+	 * @param font a <CODE>Font</CODE>
 	 */
 	public void setFont(Font font) {
 		this.font = font;
@@ -348,7 +334,7 @@ public class Chunk implements Element {
 
 	/**
 	 * Gets the font of this <CODE>Chunk</CODE>.
-	 * 
+	 *
 	 * @return a <CODE>Font</CODE>
 	 */
 	public Font getFont() {
@@ -357,7 +343,7 @@ public class Chunk implements Element {
 
 	/**
 	 * Returns the content of this <CODE>Chunk</CODE>.
-	 * 
+	 *
 	 * @return a <CODE>String</CODE>
 	 */
 	public String getContent() {
@@ -366,44 +352,40 @@ public class Chunk implements Element {
 
 	/**
 	 * Returns the content of this <CODE>Chunk</CODE>.
-	 * 
+	 *
 	 * @return a <CODE>String</CODE>
 	 */
+	@Override
 	public String toString() {
 		return getContent();
 	}
 
 	/**
 	 * Checks is this <CODE>Chunk</CODE> is empty.
-	 * 
-	 * @return <CODE>false</CODE> if the Chunk contains other characters than
-	 *         space.
+	 *
+	 * @return <CODE>false</CODE> if the Chunk contains other characters than space.
 	 */
 	public boolean isEmpty() {
-		return (content.toString().trim().length() == 0)
-				&& (content.toString().indexOf("\n") == -1)
-				&& (attributes == null);
+		return content.toString().trim().length() == 0 && content.toString().indexOf("\n") == -1 && attributes == null;
 	}
 
 	/**
 	 * Gets the width of the Chunk in points.
-	 * 
+	 *
 	 * @return a width in points
 	 */
 	public float getWidthPoint() {
 		if (getImage() != null) {
 			return getImage().getScaledWidth();
 		}
-		return font.getCalculatedBaseFont(true).getWidthPoint(getContent(),
-				font.getCalculatedSize())
-				* getHorizontalScaling();
+		return font.getCalculatedBaseFont(true).getWidthPoint(getContent(), font.getCalculatedSize()) * getHorizontalScaling();
 	}
 
 	// attributes
 
 	/**
 	 * Checks the attributes of this <CODE>Chunk</CODE>.
-	 * 
+	 *
 	 * @return false if there aren't any.
 	 */
 
@@ -415,7 +397,7 @@ public class Chunk implements Element {
 	 * Gets the attributes for this <CODE>Chunk</CODE>.
 	 * <P>
 	 * It may be null.
-	 * 
+	 *
 	 * @return the attributes for this <CODE>Chunk</CODE>
 	 */
 
@@ -425,7 +407,8 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets the attributes all at once.
-	 * @param	attributes	the attributes of a Chunk
+	 * 
+	 * @param attributes the attributes of a Chunk
 	 */
 	public void setAttributes(HashMap attributes) {
 		this.attributes = attributes;
@@ -433,17 +416,16 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets an arbitrary attribute.
-	 * 
-	 * @param name
-	 *            the key for the attribute
-	 * @param obj
-	 *            the value of the attribute
+	 *
+	 * @param name the key for the attribute
+	 * @param obj the value of the attribute
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
 	private Chunk setAttribute(String name, Object obj) {
-		if (attributes == null)
+		if (attributes == null) {
 			attributes = new HashMap();
+		}
 		attributes.put(name, obj);
 		return this;
 	}
@@ -454,28 +436,29 @@ public class Chunk implements Element {
 	public static final String HSCALE = "HSCALE";
 
 	/**
-	 * Sets the text horizontal scaling. A value of 1 is normal and a value of
-	 * 0.5f shrinks the text to half it's width.
-	 * 
-	 * @param scale
-	 *            the horizontal scaling factor
+	 * Sets the text horizontal scaling. A value of 1 is normal and a value of 0.5f shrinks the text
+	 * to half it's width.
+	 *
+	 * @param scale the horizontal scaling factor
 	 * @return this <CODE>Chunk</CODE>
 	 */
 	public Chunk setHorizontalScaling(float scale) {
-		return setAttribute(HSCALE, new Float(scale));
+		return setAttribute(HSCALE, Float.valueOf(scale));
 	}
 
 	/**
 	 * Gets the horizontal scaling.
-	 * 
+	 *
 	 * @return a percentage in float
 	 */
 	public float getHorizontalScaling() {
-		if (attributes == null)
+		if (attributes == null) {
 			return 1f;
+		}
 		Float f = (Float) attributes.get(HSCALE);
-		if (f == null)
+		if (f == null) {
 			return 1f;
+		}
 		return f.floatValue();
 	}
 
@@ -483,78 +466,61 @@ public class Chunk implements Element {
 	public static final String UNDERLINE = "UNDERLINE";
 
 	/**
-	 * Sets an horizontal line that can be an underline or a strikethrough.
-	 * Actually, the line can be anywhere vertically and has always the <CODE>
-	 * Chunk</CODE> width. Multiple call to this method will produce multiple
-	 * lines.
-	 * 
-	 * @param thickness
-	 *            the absolute thickness of the line
-	 * @param yPosition
-	 *            the absolute y position relative to the baseline
+	 * Sets an horizontal line that can be an underline or a strikethrough. Actually, the line can
+	 * be anywhere vertically and has always the <CODE>
+	 * Chunk</CODE> width. Multiple call to this method will produce multiple lines.
+	 *
+	 * @param thickness the absolute thickness of the line
+	 * @param yPosition the absolute y position relative to the baseline
 	 * @return this <CODE>Chunk</CODE>
 	 */
 	public Chunk setUnderline(float thickness, float yPosition) {
-		return setUnderline(null, thickness, 0f, yPosition, 0f,
-				PdfContentByte.LINE_CAP_BUTT);
+		return setUnderline(null, thickness, 0f, yPosition, 0f, PdfContentByte.LINE_CAP_BUTT);
 	}
 
 	/**
-	 * Sets an horizontal line that can be an underline or a strikethrough.
-	 * Actually, the line can be anywhere vertically and has always the <CODE>
-	 * Chunk</CODE> width. Multiple call to this method will produce multiple
-	 * lines.
-	 * 
-	 * @param color
-	 *            the color of the line or <CODE>null</CODE> to follow the
-	 *            text color
-	 * @param thickness
-	 *            the absolute thickness of the line
-	 * @param thicknessMul
-	 *            the thickness multiplication factor with the font size
-	 * @param yPosition
-	 *            the absolute y position relative to the baseline
-	 * @param yPositionMul
-	 *            the position multiplication factor with the font size
-	 * @param cap
-	 *            the end line cap. Allowed values are
-	 *            PdfContentByte.LINE_CAP_BUTT, PdfContentByte.LINE_CAP_ROUND
-	 *            and PdfContentByte.LINE_CAP_PROJECTING_SQUARE
+	 * Sets an horizontal line that can be an underline or a strikethrough. Actually, the line can
+	 * be anywhere vertically and has always the <CODE>
+	 * Chunk</CODE> width. Multiple call to this method will produce multiple lines.
+	 *
+	 * @param color the color of the line or <CODE>null</CODE> to follow the text color
+	 * @param thickness the absolute thickness of the line
+	 * @param thicknessMul the thickness multiplication factor with the font size
+	 * @param yPosition the absolute y position relative to the baseline
+	 * @param yPositionMul the position multiplication factor with the font size
+	 * @param cap the end line cap. Allowed values are PdfContentByte.LINE_CAP_BUTT,
+	 *            PdfContentByte.LINE_CAP_ROUND and PdfContentByte.LINE_CAP_PROJECTING_SQUARE
 	 * @return this <CODE>Chunk</CODE>
 	 */
-	public Chunk setUnderline(Color color, float thickness, float thicknessMul,
-			float yPosition, float yPositionMul, int cap) {
-		if (attributes == null)
+	public Chunk setUnderline(Color color, float thickness, float thicknessMul, float yPosition, float yPositionMul, int cap) {
+		if (attributes == null) {
 			attributes = new HashMap();
-		Object obj[] = {
-				color,
-				new float[] { thickness, thicknessMul, yPosition, yPositionMul, cap } };
-		Object unders[][] = Utilities.addToArray((Object[][]) attributes.get(UNDERLINE),
-				obj);
+		}
+		Object obj[] = { color, new float[] { thickness, thicknessMul, yPosition, yPositionMul, cap } };
+		Object unders[][] = Utilities.addToArray((Object[][]) attributes.get(UNDERLINE), obj);
 		return setAttribute(UNDERLINE, unders);
 	}
-	
+
 	/** Key for sub/superscript. */
 	public static final String SUBSUPSCRIPT = "SUBSUPSCRIPT";
-	
+
 	/**
-	 * Sets the text displacement relative to the baseline. Positive values rise
-	 * the text, negative values lower the text.
+	 * Sets the text displacement relative to the baseline. Positive values rise the text, negative
+	 * values lower the text.
 	 * <P>
 	 * It can be used to implement sub/superscript.
-	 * 
-	 * @param rise
-	 *            the displacement in points
+	 *
+	 * @param rise the displacement in points
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
 	public Chunk setTextRise(float rise) {
-		return setAttribute(SUBSUPSCRIPT, new Float(rise));
+		return setAttribute(SUBSUPSCRIPT, Float.valueOf(rise));
 	}
 
 	/**
 	 * Gets the text displacement relative to the baseline.
-	 * 
+	 *
 	 * @return a displacement in points
 	 */
 	public float getTextRise() {
@@ -571,11 +537,9 @@ public class Chunk implements Element {
 	/**
 	 * Skews the text to simulate italic and other effects. Try <CODE>alpha=0
 	 * </CODE> and <CODE>beta=12</CODE>.
-	 * 
-	 * @param alpha
-	 *            the first angle in degrees
-	 * @param beta
-	 *            the second angle in degrees
+	 *
+	 * @param alpha the first angle in degrees
+	 * @param beta the second angle in degrees
 	 * @return this <CODE>Chunk</CODE>
 	 */
 	public Chunk setSkew(float alpha, float beta) {
@@ -589,9 +553,8 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets the color of the background <CODE>Chunk</CODE>.
-	 * 
-	 * @param color
-	 *            the color of the background
+	 *
+	 * @param color the color of the background
 	 * @return this <CODE>Chunk</CODE>
 	 */
 	public Chunk setBackground(Color color) {
@@ -600,51 +563,37 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets the color and the size of the background <CODE>Chunk</CODE>.
-	 * 
-	 * @param color
-	 *            the color of the background
-	 * @param extraLeft
-	 *            increase the size of the rectangle in the left
-	 * @param extraBottom
-	 *            increase the size of the rectangle in the bottom
-	 * @param extraRight
-	 *            increase the size of the rectangle in the right
-	 * @param extraTop
-	 *            increase the size of the rectangle in the top
+	 *
+	 * @param color the color of the background
+	 * @param extraLeft increase the size of the rectangle in the left
+	 * @param extraBottom increase the size of the rectangle in the bottom
+	 * @param extraRight increase the size of the rectangle in the right
+	 * @param extraTop increase the size of the rectangle in the top
 	 * @return this <CODE>Chunk</CODE>
 	 */
-	public Chunk setBackground(Color color, float extraLeft, float extraBottom,
-			float extraRight, float extraTop) {
-		return setAttribute(BACKGROUND, new Object[] { color,
-				new float[] { extraLeft, extraBottom, extraRight, extraTop } });
+	public Chunk setBackground(Color color, float extraLeft, float extraBottom, float extraRight, float extraTop) {
+		return setAttribute(BACKGROUND, new Object[] { color, new float[] { extraLeft, extraBottom, extraRight, extraTop } });
 	}
 
 	/** Key for text rendering mode. */
 	public static final String TEXTRENDERMODE = "TEXTRENDERMODE";
 
 	/**
-	 * Sets the text rendering mode. It can outline text, simulate bold and make
-	 * text invisible.
-	 * 
-	 * @param mode
-	 *            the text rendering mode. It can be <CODE>
+	 * Sets the text rendering mode. It can outline text, simulate bold and make text invisible.
+	 *
+	 * @param mode the text rendering mode. It can be <CODE>
 	 *            PdfContentByte.TEXT_RENDER_MODE_FILL</CODE>,<CODE>
 	 *            PdfContentByte.TEXT_RENDER_MODE_STROKE</CODE>,<CODE>
 	 *            PdfContentByte.TEXT_RENDER_MODE_FILL_STROKE</CODE> and <CODE>
 	 *            PdfContentByte.TEXT_RENDER_MODE_INVISIBLE</CODE>.
-	 * @param strokeWidth
-	 *            the stroke line width for the modes <CODE>
+	 * @param strokeWidth the stroke line width for the modes <CODE>
 	 *            PdfContentByte.TEXT_RENDER_MODE_STROKE</CODE> and <CODE>
 	 *            PdfContentByte.TEXT_RENDER_MODE_FILL_STROKE</CODE>.
-	 * @param strokeColor
-	 *            the stroke color or <CODE>null</CODE> to follow the text
-	 *            color
+	 * @param strokeColor the stroke color or <CODE>null</CODE> to follow the text color
 	 * @return this <CODE>Chunk</CODE>
 	 */
-	public Chunk setTextRenderMode(int mode, float strokeWidth,
-			Color strokeColor) {
-		return setAttribute(TEXTRENDERMODE, new Object[] { new Integer(mode),
-				new Float(strokeWidth), strokeColor });
+	public Chunk setTextRenderMode(int mode, float strokeWidth, Color strokeColor) {
+		return setAttribute(TEXTRENDERMODE, new Object[] { Integer.valueOf(mode), Float.valueOf(strokeWidth), strokeColor });
 	}
 
 	/** Key for split character. */
@@ -652,9 +601,8 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets the split characters.
-	 * 
-	 * @param splitCharacter
-	 *            the <CODE>SplitCharacter</CODE> interface
+	 *
+	 * @param splitCharacter the <CODE>SplitCharacter</CODE> interface
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
@@ -664,12 +612,11 @@ public class Chunk implements Element {
 
 	/** Key for hyphenation. */
 	public static final String HYPHENATION = "HYPHENATION";
-	
+
 	/**
 	 * sets the hyphenation engine to this <CODE>Chunk</CODE>.
-	 * 
-	 * @param hyphenation
-	 *            the hyphenation engine
+	 *
+	 * @param hyphenation the hyphenation engine
 	 * @return this <CODE>Chunk</CODE>
 	 */
 	public Chunk setHyphenation(HyphenationEvent hyphenation) {
@@ -681,11 +628,9 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets a goto for a remote destination for this <CODE>Chunk</CODE>.
-	 * 
-	 * @param filename
-	 *            the file name of the destination document
-	 * @param name
-	 *            the name of the destination to go to
+	 *
+	 * @param filename the file name of the destination document
+	 * @param name the name of the destination to go to
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
@@ -695,29 +640,25 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets a goto for a remote destination for this <CODE>Chunk</CODE>.
-	 * 
-	 * @param filename
-	 *            the file name of the destination document
-	 * @param page
-	 *            the page of the destination to go to. First page is 1
+	 *
+	 * @param filename the file name of the destination document
+	 * @param page the page of the destination to go to. First page is 1
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
 	public Chunk setRemoteGoto(String filename, int page) {
-		return setAttribute(REMOTEGOTO, new Object[] { filename,
-				new Integer(page) });
+		return setAttribute(REMOTEGOTO, new Object[] { filename, Integer.valueOf(page) });
 	}
 
 	/** Key for local goto. */
 	public static final String LOCALGOTO = "LOCALGOTO";
-	
+
 	/**
 	 * Sets a local goto for this <CODE>Chunk</CODE>.
 	 * <P>
 	 * There must be a local destination matching the name.
-	 * 
-	 * @param name
-	 *            the name of the destination to go to
+	 *
+	 * @param name the name of the destination to go to
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
@@ -730,9 +671,8 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets a local destination for this <CODE>Chunk</CODE>.
-	 * 
-	 * @param name
-	 *            the name for this destination
+	 *
+	 * @param name the name for this destination
 	 * @return this <CODE>Chunk</CODE>
 	 */
 	public Chunk setLocalDestination(String name) {
@@ -746,44 +686,43 @@ public class Chunk implements Element {
 	 * Sets the generic tag <CODE>Chunk</CODE>.
 	 * <P>
 	 * The text for this tag can be retrieved with <CODE>PdfPageEvent</CODE>.
-	 * 
-	 * @param text
-	 *            the text for the tag
+	 *
+	 * @param text the text for the tag
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
 	public Chunk setGenericTag(String text) {
 		return setAttribute(GENERICTAG, text);
 	}
-	
+
 	/** Key for image. */
 	public static final String IMAGE = "IMAGE";
 
 	/**
 	 * Returns the image.
-	 * 
+	 *
 	 * @return the image
 	 */
 
 	public Image getImage() {
-		if (attributes == null)
+		if (attributes == null) {
 			return null;
+		}
 		Object obj[] = (Object[]) attributes.get(Chunk.IMAGE);
-		if (obj == null)
+		if (obj == null) {
 			return null;
-		else {
+		} else {
 			return (Image) obj[0];
 		}
 	}
-	
+
 	/** Key for Action. */
 	public static final String ACTION = "ACTION";
 
 	/**
 	 * Sets an action for this <CODE>Chunk</CODE>.
-	 * 
-	 * @param action
-	 *            the action
+	 *
+	 * @param action the action
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
@@ -793,9 +732,8 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets an anchor for this <CODE>Chunk</CODE>.
-	 * 
-	 * @param url
-	 *            the <CODE>URL</CODE> to link to
+	 *
+	 * @param url the <CODE>URL</CODE> to link to
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
@@ -805,22 +743,21 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets an anchor for this <CODE>Chunk</CODE>.
-	 * 
-	 * @param url
-	 *            the url to link to
+	 *
+	 * @param url the url to link to
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
 	public Chunk setAnchor(String url) {
 		return setAttribute(ACTION, new PdfAction(url));
 	}
-	
+
 	/** Key for newpage. */
 	public static final String NEWPAGE = "NEWPAGE";
 
 	/**
 	 * Sets a new page tag..
-	 * 
+	 *
 	 * @return this <CODE>Chunk</CODE>
 	 */
 
@@ -833,46 +770,50 @@ public class Chunk implements Element {
 
 	/**
 	 * Sets a generic annotation to this <CODE>Chunk</CODE>.
-	 * 
-	 * @param annotation
-	 *            the annotation
+	 *
+	 * @param annotation the annotation
 	 * @return this <CODE>Chunk</CODE>
 	 */
 	public Chunk setAnnotation(PdfAnnotation annotation) {
 		return setAttribute(PDFANNOTATION, annotation);
 	}
-	
+
 	/**
 	 * @see com.lowagie.text.Element#isContent()
-	 * @since	iText 2.0.8
+	 * @since iText 2.0.8
 	 */
+	@Override
 	public boolean isContent() {
 		return true;
 	}
 
 	/**
 	 * @see com.lowagie.text.Element#isNestable()
-	 * @since	iText 2.0.8
+	 * @since iText 2.0.8
 	 */
+	@Override
 	public boolean isNestable() {
 		return true;
 	}
 
 	/**
-     * Returns the hyphenation (if present).
-     * @since	2.1.2
+	 * Returns the hyphenation (if present).
+	 * 
+	 * @since 2.1.2
 	 */
-    public HyphenationEvent getHyphenation() {
-        if (attributes == null) return null;
-        return (HyphenationEvent) attributes.get(Chunk.HYPHENATION);
+	public HyphenationEvent getHyphenation() {
+		if (attributes == null) {
+			return null;
+		}
+		return (HyphenationEvent) attributes.get(Chunk.HYPHENATION);
 	}
-	
+
 	// keys used in PdfChunk
-	
+
 	/** Key for color. */
-	public static final String COLOR = "COLOR";
+	public static final String	COLOR		= "COLOR";
 
 	/** Key for encoding. */
-	public static final String ENCODING = "ENCODING";
+	public static final String	ENCODING	= "ENCODING";
 
 }
