@@ -42,7 +42,7 @@
  *
  * Contributions by:
  * Lubos Strapko
- * 
+ *
  * If you didn't download this code from the following link, you should check if
  * you aren't using an obsolete version:
  * http://www.lowagie.com/iText/
@@ -50,16 +50,6 @@
 
 package com.lowagie.text.html.simpleparser;
 
-import java.io.File;
-import java.io.IOException;
-import java.io.Reader;
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.Stack;
-import java.util.StringTokenizer;
-
-import com.lowagie.text.html.HtmlTags;
-import com.lowagie.text.html.Markup;
 import com.lowagie.text.Chunk;
 import com.lowagie.text.DocListener;
 import com.lowagie.text.DocumentException;
@@ -74,44 +64,57 @@ import com.lowagie.text.Paragraph;
 import com.lowagie.text.Phrase;
 import com.lowagie.text.Rectangle;
 import com.lowagie.text.TextElementArray;
+import com.lowagie.text.html.HtmlTags;
+import com.lowagie.text.html.Markup;
 import com.lowagie.text.pdf.PdfPTable;
 import com.lowagie.text.pdf.draw.LineSeparator;
 import com.lowagie.text.xml.simpleparser.SimpleXMLDocHandler;
 import com.lowagie.text.xml.simpleparser.SimpleXMLParser;
 
+import java.io.File;
+import java.io.IOException;
+import java.io.Reader;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.Stack;
+import java.util.StringTokenizer;
+
+@SuppressWarnings("unchecked")
 public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 
-	protected ArrayList objectList;
+	protected ArrayList			objectList;
 
-	protected DocListener document;
+	protected DocListener		document;
 
-	private Paragraph currentParagraph;
+	private Paragraph			currentParagraph;
 
-	private ChainedProperties cprops = new ChainedProperties();
+	private ChainedProperties	cprops				= new ChainedProperties();
 
-	private Stack stack = new Stack();
+	private Stack				stack				= new Stack();
 
-	private boolean pendingTR = false;
+	private boolean				pendingTR			= false;
 
-	private boolean pendingTD = false;
+	private boolean				pendingTD			= false;
 
-	private boolean pendingLI = false;
+	private boolean				pendingLI			= false;
 
-	private StyleSheet style = new StyleSheet();
+	private StyleSheet			style				= new StyleSheet();
 
-	private boolean isPRE = false;
+	private boolean				isPRE				= false;
 
-	private Stack tableState = new Stack();
+	private Stack				tableState			= new Stack();
 
-	private boolean skipText = false;
+	private boolean				skipText			= false;
 
-	private HashMap interfaceProps;
+	private HashMap				interfaceProps;
 
-	private FactoryProperties factoryProperties = new FactoryProperties();
+	private FactoryProperties	factoryProperties	= new FactoryProperties();
 
-	/** Creates a new instance of HTMLWorker
+	/**
+	 * Creates a new instance of HTMLWorker
+	 * 
 	 * @param document A class that implements <CODE>DocListener</CODE>
-	 * */
+	 */
 	public HTMLWorker(DocListener document) {
 		this.document = document;
 	}
@@ -127,10 +130,12 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 	public void setInterfaceProps(HashMap interfaceProps) {
 		this.interfaceProps = interfaceProps;
 		FontFactoryImp ff = null;
-		if (interfaceProps != null)
+		if (interfaceProps != null) {
 			ff = (FontFactoryImp) interfaceProps.get("font_factory");
-		if (ff != null)
+		}
+		if (ff != null) {
 			factoryProperties.setFontImp(ff);
+		}
 	}
 
 	public HashMap getInterfaceProps() {
@@ -141,16 +146,15 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 		SimpleXMLParser.parse(this, null, reader, true);
 	}
 
-	public static ArrayList parseToList(Reader reader, StyleSheet style)
-			throws IOException {
+	public static ArrayList parseToList(Reader reader, StyleSheet style) throws IOException {
 		return parseToList(reader, style, null);
 	}
 
-	public static ArrayList parseToList(Reader reader, StyleSheet style,
-			HashMap interfaceProps) throws IOException {
+	public static ArrayList parseToList(Reader reader, StyleSheet style, HashMap interfaceProps) throws IOException {
 		HTMLWorker worker = new HTMLWorker(null);
-		if (style != null)
+		if (style != null) {
 			worker.style = style;
+		}
 		worker.document = worker;
 		worker.setInterfaceProps(interfaceProps);
 		worker.objectList = new ArrayList();
@@ -158,27 +162,33 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 		return worker.objectList;
 	}
 
+	@Override
 	public void endDocument() {
 		try {
-			for (int k = 0; k < stack.size(); ++k)
+			for (int k = 0; k < stack.size(); ++k) {
 				document.add((Element) stack.elementAt(k));
-			if (currentParagraph != null)
+			}
+			if (currentParagraph != null) {
 				document.add(currentParagraph);
+			}
 			currentParagraph = null;
 		} catch (Exception e) {
 			throw new ExceptionConverter(e);
 		}
 	}
 
+	@Override
 	public void startDocument() {
 		HashMap h = new HashMap();
 		style.applyStyle("body", h);
 		cprops.addToChain("body", h);
 	}
 
+	@Override
 	public void startElement(String tag, HashMap h) {
-		if (!tagsSupported.containsKey(tag))
+		if (!tagsSupported.containsKey(tag)) {
 			return;
+		}
 		try {
 			style.applyStyle(tag, h);
 			String follow = (String) FactoryProperties.followTags.get(tag);
@@ -202,8 +212,7 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				if (currentParagraph == null) {
 					currentParagraph = new Paragraph();
 				}
-				currentParagraph.add(factoryProperties
-						.createChunk("\n", cprops));
+				currentParagraph.add(factoryProperties.createChunk("\n", cprops));
 				return;
 			}
 			if (tag.equals(HtmlTags.HORIZONTALRULE)) {
@@ -218,36 +227,43 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				}
 				if (addLeadingBreak) { // Not a new paragraph
 					int numChunks = currentParagraph.getChunks().size();
-					if (numChunks == 0 ||
-							((Chunk)(currentParagraph.getChunks().get(numChunks - 1))).getContent().endsWith("\n"))
+					if (numChunks == 0 || ((Chunk) currentParagraph.getChunks().get(numChunks - 1)).getContent().endsWith("\n")) {
 						addLeadingBreak = false;
+					}
 				}
 				String align = (String) h.get("align");
 				int hrAlign = Element.ALIGN_CENTER;
 				if (align != null) {
-					if (align.equalsIgnoreCase("left"))
-						hrAlign = Element.ALIGN_LEFT; 
-					if (align.equalsIgnoreCase("right"))
+					if (align.equalsIgnoreCase("left")) {
+						hrAlign = Element.ALIGN_LEFT;
+					}
+					if (align.equalsIgnoreCase("right")) {
 						hrAlign = Element.ALIGN_RIGHT;
+					}
 				}
 				String width = (String) h.get("width");
 				float hrWidth = 1;
 				if (width != null) {
 					float tmpWidth = Markup.parseLength(width, Markup.DEFAULT_FONT_SIZE);
-					if (tmpWidth > 0) hrWidth = tmpWidth;
-					if (!width.endsWith("%"))
+					if (tmpWidth > 0) {
+						hrWidth = tmpWidth;
+					}
+					if (!width.endsWith("%")) {
 						hrWidth = 100; // Treat a pixel width as 100% for now.
+					}
 				}
 				String size = (String) h.get("size");
 				float hrSize = 1;
 				if (size != null) {
 					float tmpSize = Markup.parseLength(size, Markup.DEFAULT_FONT_SIZE);
-					if (tmpSize > 0)
+					if (tmpSize > 0) {
 						hrSize = tmpSize;
+					}
 				}
-				if (addLeadingBreak)
+				if (addLeadingBreak) {
 					currentParagraph.add(Chunk.NEWLINE);
-				currentParagraph.add(new LineSeparator(hrSize, hrWidth, null, hrAlign, currentParagraph.getLeading()/2));
+				}
+				currentParagraph.add(new LineSeparator(hrSize, hrWidth, null, hrAlign, currentParagraph.getLeading() / 2));
 				currentParagraph.add(Chunk.NEWLINE);
 				return;
 			}
@@ -257,26 +273,26 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 			}
 			if (tag.equals(HtmlTags.IMAGE)) {
 				String src = (String) h.get(ElementTags.SRC);
-				if (src == null)
+				if (src == null) {
 					return;
+				}
 				cprops.addToChain(tag, h);
 				Image img = null;
 				if (interfaceProps != null) {
-					ImageProvider ip = (ImageProvider) interfaceProps
-							.get("img_provider");
-					if (ip != null)
+					ImageProvider ip = (ImageProvider) interfaceProps.get("img_provider");
+					if (ip != null) {
 						img = ip.getImage(src, h, cprops, document);
+					}
 					if (img == null) {
-						HashMap images = (HashMap) interfaceProps
-								.get("img_static");
+						HashMap images = (HashMap) interfaceProps.get("img_static");
 						if (images != null) {
 							Image tim = (Image) images.get(src);
-							if (tim != null)
+							if (tim != null) {
 								img = Image.getInstance(tim);
+							}
 						} else {
 							if (!src.startsWith("http")) { // relative src references only
-								String baseurl = (String) interfaceProps
-										.get("img_baseurl");
+								String baseurl = (String) interfaceProps.get("img_baseurl");
 								if (baseurl != null) {
 									src = baseurl + src;
 									img = Image.getInstance(src);
@@ -288,8 +304,9 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				if (img == null) {
 					if (!src.startsWith("http")) {
 						String path = cprops.getProperty("image_path");
-						if (path == null)
+						if (path == null) {
 							path = "";
+						}
 						src = new File(path, src).getPath();
 					}
 					img = Image.getInstance(src);
@@ -299,61 +316,60 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				String height = (String) h.get("height");
 				String before = cprops.getProperty("before");
 				String after = cprops.getProperty("after");
-				if (before != null)
+				if (before != null) {
 					img.setSpacingBefore(Float.parseFloat(before));
-				if (after != null)
+				}
+				if (after != null) {
 					img.setSpacingAfter(Float.parseFloat(after));
-				float actualFontSize = Markup.parseLength(cprops
-						.getProperty(ElementTags.SIZE),
-						Markup.DEFAULT_FONT_SIZE);
-				if (actualFontSize <= 0f)
+				}
+				float actualFontSize = Markup.parseLength(cprops.getProperty(ElementTags.SIZE), Markup.DEFAULT_FONT_SIZE);
+				if (actualFontSize <= 0f) {
 					actualFontSize = Markup.DEFAULT_FONT_SIZE;
+				}
 				float widthInPoints = Markup.parseLength(width, actualFontSize);
-				float heightInPoints = Markup.parseLength(height,
-						actualFontSize);
+				float heightInPoints = Markup.parseLength(height, actualFontSize);
 				if (widthInPoints > 0 && heightInPoints > 0) {
 					img.scaleAbsolute(widthInPoints, heightInPoints);
 				} else if (widthInPoints > 0) {
-					heightInPoints = img.getHeight() * widthInPoints
-							/ img.getWidth();
+					heightInPoints = img.getHeight() * widthInPoints / img.getWidth();
 					img.scaleAbsolute(widthInPoints, heightInPoints);
 				} else if (heightInPoints > 0) {
-					widthInPoints = img.getWidth() * heightInPoints
-							/ img.getHeight();
+					widthInPoints = img.getWidth() * heightInPoints / img.getHeight();
 					img.scaleAbsolute(widthInPoints, heightInPoints);
 				}
 				img.setWidthPercentage(0);
 				if (align != null) {
 					endElement("p");
 					int ralign = Image.MIDDLE;
-					if (align.equalsIgnoreCase("left"))
+					if (align.equalsIgnoreCase("left")) {
 						ralign = Image.LEFT;
-					else if (align.equalsIgnoreCase("right"))
+					} else if (align.equalsIgnoreCase("right")) {
 						ralign = Image.RIGHT;
+					}
 					img.setAlignment(ralign);
 					Img i = null;
 					boolean skip = false;
 					if (interfaceProps != null) {
 						i = (Img) interfaceProps.get("img_interface");
-						if (i != null)
+						if (i != null) {
 							skip = i.process(img, h, cprops, document);
+						}
 					}
-					if (!skip)
+					if (!skip) {
 						document.add(img);
+					}
 					cprops.removeChain(tag);
 				} else {
 					cprops.removeChain(tag);
 					if (currentParagraph == null) {
-						currentParagraph = FactoryProperties
-								.createParagraph(cprops);
+						currentParagraph = FactoryProperties.createParagraph(cprops);
 					}
 					currentParagraph.add(new Chunk(img, 0, 0));
 				}
 				return;
 			}
 			endElement("p");
-			if (tag.equals("h1") || tag.equals("h2") || tag.equals("h3")
-					|| tag.equals("h4") || tag.equals("h5") || tag.equals("h6")) {
+			if (tag.equals("h1") || tag.equals("h2") || tag.equals("h3") || tag.equals("h4") || tag.equals("h5") || tag.equals("h6")) {
 				if (!h.containsKey(ElementTags.SIZE)) {
 					int v = 7 - Integer.parseInt(tag.substring(1));
 					h.put(ElementTags.SIZE, Integer.toString(v));
@@ -362,14 +378,15 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				return;
 			}
 			if (tag.equals(HtmlTags.UNORDEREDLIST)) {
-				if (pendingLI)
+				if (pendingLI) {
 					endElement(HtmlTags.LISTITEM);
+				}
 				skipText = true;
 				cprops.addToChain(tag, h);
 				com.lowagie.text.List list = new com.lowagie.text.List(false);
-				try{
-					list.setIndentationLeft(new Float(cprops.getProperty("indent")).floatValue());
-				}catch (Exception e) {
+				try {
+					list.setIndentationLeft(Float.valueOf(cprops.getProperty("indent")).floatValue());
+				} catch (Exception e) {
 					list.setAutoindent(true);
 				}
 				list.setListSymbol("\u2022");
@@ -377,22 +394,24 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				return;
 			}
 			if (tag.equals(HtmlTags.ORDEREDLIST)) {
-				if (pendingLI)
+				if (pendingLI) {
 					endElement(HtmlTags.LISTITEM);
+				}
 				skipText = true;
 				cprops.addToChain(tag, h);
 				com.lowagie.text.List list = new com.lowagie.text.List(true);
-				try{
-					list.setIndentationLeft(new Float(cprops.getProperty("indent")).floatValue());
-				}catch (Exception e) {
+				try {
+					list.setIndentationLeft(Float.valueOf(cprops.getProperty("indent")).floatValue());
+				} catch (Exception e) {
 					list.setAutoindent(true);
 				}
 				stack.push(list);
 				return;
 			}
 			if (tag.equals(HtmlTags.LISTITEM)) {
-				if (pendingLI)
+				if (pendingLI) {
 					endElement(HtmlTags.LISTITEM);
+				}
 				skipText = false;
 				pendingLI = true;
 				cprops.addToChain(tag, h);
@@ -413,16 +432,18 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				return;
 			}
 			if (tag.equals("tr")) {
-				if (pendingTR)
+				if (pendingTR) {
 					endElement("tr");
+				}
 				skipText = true;
 				pendingTR = true;
 				cprops.addToChain("tr", h);
 				return;
 			}
 			if (tag.equals("td") || tag.equals("th")) {
-				if (pendingTD)
+				if (pendingTD) {
 					endElement(tag);
+				}
 				skipText = false;
 				pendingTD = true;
 				cprops.addToChain("td", h);
@@ -443,9 +464,11 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 		}
 	}
 
+	@Override
 	public void endElement(String tag) {
-		if (!tagsSupported.containsKey(tag))
+		if (!tagsSupported.containsKey(tag)) {
 			return;
+		}
 		try {
 			String follow = (String) FactoryProperties.followTags.get(tag);
 			if (follow != null) {
@@ -463,8 +486,9 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				boolean skip = false;
 				if (interfaceProps != null) {
 					ALink i = (ALink) interfaceProps.get("alink_interface");
-					if (i != null)
+					if (i != null) {
 						skip = i.process(currentParagraph, cprops);
+					}
 				}
 				if (!skip) {
 					String href = cprops.getProperty("href");
@@ -489,9 +513,9 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				return;
 			}
 			if (currentParagraph != null) {
-				if (stack.empty())
+				if (stack.empty()) {
 					document.add(currentParagraph);
-				else {
+				} else {
 					Object obj = stack.pop();
 					if (obj instanceof TextElementArray) {
 						TextElementArray current = (TextElementArray) obj;
@@ -501,31 +525,34 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				}
 			}
 			currentParagraph = null;
-			if (tag.equals(HtmlTags.UNORDEREDLIST)
-					|| tag.equals(HtmlTags.ORDEREDLIST)) {
-				if (pendingLI)
+			if (tag.equals(HtmlTags.UNORDEREDLIST) || tag.equals(HtmlTags.ORDEREDLIST)) {
+				if (pendingLI) {
 					endElement(HtmlTags.LISTITEM);
+				}
 				skipText = false;
 				cprops.removeChain(tag);
-				if (stack.empty())
+				if (stack.empty()) {
 					return;
+				}
 				Object obj = stack.pop();
 				if (!(obj instanceof com.lowagie.text.List)) {
 					stack.push(obj);
 					return;
 				}
-				if (stack.empty())
+				if (stack.empty()) {
 					document.add((Element) obj);
-				else
+				} else {
 					((TextElementArray) stack.peek()).add(obj);
+				}
 				return;
 			}
 			if (tag.equals(HtmlTags.LISTITEM)) {
 				pendingLI = false;
 				skipText = true;
 				cprops.removeChain(tag);
-				if (stack.empty())
+				if (stack.empty()) {
 					return;
+				}
 				Object obj = stack.pop();
 				if (!(obj instanceof ListItem)) {
 					stack.push(obj);
@@ -543,9 +570,9 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				ListItem item = (ListItem) obj;
 				((com.lowagie.text.List) list).add(item);
 				ArrayList cks = item.getChunks();
-				if (!cks.isEmpty())
-					item.getListSymbol()
-							.setFont(((Chunk) cks.get(0)).getFont());
+				if (!cks.isEmpty()) {
+					item.getListSymbol().setFont(((Chunk) cks.get(0)).getFont());
+				}
 				stack.push(list);
 				return;
 			}
@@ -562,22 +589,23 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				cprops.removeChain(tag);
 				return;
 			}
-			if (tag.equals("h1") || tag.equals("h2") || tag.equals("h3")
-					|| tag.equals("h4") || tag.equals("h5") || tag.equals("h6")) {
+			if (tag.equals("h1") || tag.equals("h2") || tag.equals("h3") || tag.equals("h4") || tag.equals("h5") || tag.equals("h6")) {
 				cprops.removeChain(tag);
 				return;
 			}
 			if (tag.equals("table")) {
-				if (pendingTR)
+				if (pendingTR) {
 					endElement("tr");
+				}
 				cprops.removeChain("table");
 				IncTable table = (IncTable) stack.pop();
 				PdfPTable tb = table.buildTable();
 				tb.setSplitRows(true);
-				if (stack.empty())
+				if (stack.empty()) {
 					document.add(tb);
-				else
+				} else {
 					((TextElementArray) stack.peek()).add(tb);
+				}
 				boolean state[] = (boolean[]) tableState.pop();
 				pendingTR = state[0];
 				pendingTD = state[1];
@@ -585,8 +613,9 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 				return;
 			}
 			if (tag.equals("tr")) {
-				if (pendingTD)
+				if (pendingTD) {
 					endElement("td");
+				}
 				pendingTR = false;
 				cprops.removeChain("tr");
 				ArrayList cells = new ArrayList();
@@ -618,9 +647,11 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 		}
 	}
 
+	@Override
 	public void text(String str) {
-		if (skipText)
+		if (skipText) {
 			return;
+		}
 		String content = str;
 		if (isPRE) {
 			if (currentParagraph == null) {
@@ -640,24 +671,24 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 		boolean newline = false;
 		for (int i = 0; i < len; i++) {
 			switch (character = content.charAt(i)) {
-			case ' ':
-				if (!newline) {
+				case ' ':
+					if (!newline) {
+						buf.append(character);
+					}
+					break;
+				case '\n':
+					if (i > 0) {
+						newline = true;
+						buf.append(' ');
+					}
+					break;
+				case '\r':
+					break;
+				case '\t':
+					break;
+				default:
+					newline = false;
 					buf.append(character);
-				}
-				break;
-			case '\n':
-				if (i > 0) {
-					newline = true;
-					buf.append(' ');
-				}
-				break;
-			case '\r':
-				break;
-			case '\t':
-				break;
-			default:
-				newline = false;
-				buf.append(character);
 			}
 		}
 		if (currentParagraph == null) {
@@ -667,6 +698,7 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 		currentParagraph.add(chunk);
 	}
 
+	@Override
 	public boolean add(Element element) throws DocumentException {
 		objectList.add(element);
 		return true;
@@ -675,64 +707,76 @@ public class HTMLWorker implements SimpleXMLDocHandler, DocListener {
 	public void clearTextWrap() throws DocumentException {
 	}
 
+	@Override
 	public void close() {
 	}
 
+	@Override
 	public boolean newPage() {
 		return true;
 	}
 
+	@Override
 	public void open() {
 	}
 
+	@Override
 	public void resetFooter() {
 	}
 
+	@Override
 	public void resetHeader() {
 	}
 
+	@Override
 	public void resetPageCount() {
 	}
 
+	@Override
 	public void setFooter(HeaderFooter footer) {
 	}
 
+	@Override
 	public void setHeader(HeaderFooter header) {
 	}
 
+	@Override
 	public boolean setMarginMirroring(boolean marginMirroring) {
 		return false;
 	}
 
 	/**
-     * @see com.lowagie.text.DocListener#setMarginMirroring(boolean)
-	 * @since	2.1.6
+	 * @see com.lowagie.text.DocListener#setMarginMirroring(boolean)
+	 * @since 2.1.6
 	 */
+	@Override
 	public boolean setMarginMirroringTopBottom(boolean marginMirroring) {
 		return false;
 	}
 
-	public boolean setMargins(float marginLeft, float marginRight,
-			float marginTop, float marginBottom) {
+	@Override
+	public boolean setMargins(float marginLeft, float marginRight, float marginTop, float marginBottom) {
 		return true;
 	}
 
+	@Override
 	public void setPageCount(int pageN) {
 	}
 
+	@Override
 	public boolean setPageSize(Rectangle pageSize) {
 		return true;
 	}
 
-	public static final String tagsSupportedString = "ol ul li a pre font span br p div body table td th tr i b u sub sup em strong s strike"
-			+ " h1 h2 h3 h4 h5 h6 img hr";
+	public static final String	tagsSupportedString	= "ol ul li a pre font span br p div body table td th tr i b u sub sup em strong s strike" + " h1 h2 h3 h4 h5 h6 img hr";
 
-	public static final HashMap tagsSupported = new HashMap();
+	public static final HashMap	tagsSupported		= new HashMap();
 
 	static {
 		StringTokenizer tok = new StringTokenizer(tagsSupportedString);
-		while (tok.hasMoreTokens())
+		while (tok.hasMoreTokens()) {
 			tagsSupported.put(tok.nextToken(), null);
+		}
 	}
 
 }
