@@ -31,7 +31,6 @@
 package com.lowagie.text.pdf.fonts.cmaps;
 
 import java.io.IOException;
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
@@ -41,121 +40,103 @@ import java.util.Map;
  * This class represents a CMap file.
  *
  * @author Ben Litchfield (ben@benlitchfield.com)
- * @since	2.1.4
+ * @since 2.1.4
  */
-public class CMap
-{
-    private List codeSpaceRanges = new ArrayList();
-    private Map singleByteMappings = new HashMap();
-    private Map doubleByteMappings = new HashMap();
+@SuppressWarnings("unchecked")
+public class CMap {
+	private List	codeSpaceRanges		= new ArrayList();
+	private Map		singleByteMappings	= new HashMap();
+	private Map		doubleByteMappings	= new HashMap();
 
-    /**
-     * Creates a new instance of CMap.
-     */
-    public CMap()
-    {
-        //default constructor
-    }
-    
-    /**
-     * This will tell if this cmap has any one byte mappings.
-     * 
-     * @return true If there are any one byte mappings, false otherwise.
-     */
-    public boolean hasOneByteMappings()
-    {
-        return !singleByteMappings.isEmpty();
-    }
-    
-    /**
-     * This will tell if this cmap has any two byte mappings.
-     * 
-     * @return true If there are any two byte mappings, false otherwise.
-     */
-    public boolean hasTwoByteMappings()
-    {
-        return !doubleByteMappings.isEmpty();
-    }
+	/**
+	 * Creates a new instance of CMap.
+	 */
+	public CMap() {
+		// default constructor
+	}
 
-    /**
-     * This will perform a lookup into the map.
-     *
-     * @param code The code used to lookup.
-     * @param offset The offset into the byte array.
-     * @param length The length of the data we are getting.
-     *
-     * @return The string that matches the lookup.
-     */
-    public String lookup( byte[] code, int offset, int length )
-    {
+	/**
+	 * This will tell if this cmap has any one byte mappings.
+	 * 
+	 * @return true If there are any one byte mappings, false otherwise.
+	 */
+	public boolean hasOneByteMappings() {
+		return !singleByteMappings.isEmpty();
+	}
 
-        String result = null;
-        Integer key = null;
-        if( length == 1 )
-        {
-            
-            key = new Integer( (code[offset]+256)%256 );
-            result = (String)singleByteMappings.get( key );
-        }
-        else if( length == 2 )
-        {
-            int intKey = (code[offset]+256)%256;
-            intKey <<= 8;
-            intKey += (code[offset+1]+256)%256;
-            key = new Integer( intKey );
+	/**
+	 * This will tell if this cmap has any two byte mappings.
+	 * 
+	 * @return true If there are any two byte mappings, false otherwise.
+	 */
+	public boolean hasTwoByteMappings() {
+		return !doubleByteMappings.isEmpty();
+	}
 
-            result = (String)doubleByteMappings.get( key );
-        }
+	/**
+	 * This will perform a lookup into the map.
+	 *
+	 * @param code The code used to lookup.
+	 * @param offset The offset into the byte array.
+	 * @param length The length of the data we are getting.
+	 * @return The string that matches the lookup.
+	 */
+	public String lookup(byte[] code, int offset, int length) {
 
-        return result;
-    }
+		String result = null;
+		Integer key = null;
+		if (length == 1) {
 
-    /**
-     * This will add a mapping.
-     *
-     * @param src The src to the mapping.
-     * @param dest The dest to the mapping.
-     *
-     * @throws IOException if the src is invalid.
-     */
-    public void addMapping( byte[] src, String dest ) throws IOException
-    {
-        if( src.length == 1 )
-        {
-            singleByteMappings.put( new Integer( src[0] ), dest );
-        }
-        else if( src.length == 2 )
-        {
-            int intSrc = src[0]&0xFF;
-            intSrc <<= 8;
-            intSrc |= (src[1]&0xFF);
-            doubleByteMappings.put( new Integer( intSrc ), dest );
-        }
-        else
-        {
-            throw new IOException( "Mapping code should be 1 or two bytes and not " + src.length );
-        }
-    }
+			key = Integer.valueOf((code[offset] + 256) % 256);
+			result = (String) singleByteMappings.get(key);
+		} else if (length == 2) {
+			int intKey = (code[offset] + 256) % 256;
+			intKey <<= 8;
+			intKey += (code[offset + 1] + 256) % 256;
+			key = Integer.valueOf(intKey);
 
+			result = (String) doubleByteMappings.get(key);
+		}
 
-    /**
-     * This will add a codespace range.
-     *
-     * @param range A single codespace range.
-     */
-    public void addCodespaceRange( CodespaceRange range )
-    {
-        codeSpaceRanges.add( range );
-    }
+		return result;
+	}
 
-    /**
-     * Getter for property codeSpaceRanges.
-     *
-     * @return Value of property codeSpaceRanges.
-     */
-    public List getCodeSpaceRanges()
-    {
-        return codeSpaceRanges;
-    }
+	/**
+	 * This will add a mapping.
+	 *
+	 * @param src The src to the mapping.
+	 * @param dest The dest to the mapping.
+	 * @throws IOException if the src is invalid.
+	 */
+	public void addMapping(byte[] src, String dest) throws IOException {
+		if (src.length == 1) {
+			singleByteMappings.put(Integer.valueOf(src[0]), dest);
+		} else if (src.length == 2) {
+			int intSrc = src[0] & 0xFF;
+			intSrc <<= 8;
+			intSrc |= src[1] & 0xFF;
+			doubleByteMappings.put(Integer.valueOf(intSrc), dest);
+		} else {
+			throw new IOException("Mapping code should be 1 or two bytes and not " + src.length);
+		}
+	}
+
+	/**
+	 * This will add a codespace range.
+	 *
+	 * @param range A single codespace range.
+	 */
+	public void addCodespaceRange(CodespaceRange range) {
+		codeSpaceRanges.add(range);
+	}
+
+	/**
+	 * Getter for property codeSpaceRanges.
+	 *
+	 * @return Value of property codeSpaceRanges.
+	 */
+	public List getCodeSpaceRanges() {
+		return codeSpaceRanges;
+	}
 
 }
